--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-04-05 21:00-0300\n"
+"PO-Revision-Date: 2021-04-24 16:16-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -111,6 +111,9 @@ msgid ""
 "the alpha and beta releases for both versions being made on the same days.  "
 "The development of 3.0 has influenced many features in 2.6."
 msgstr ""
+"El ciclo de desarrollo de las versiones 2.6 y 3.0 de Python se sincronizó, y "
+"las versiones alfa y beta de ambos lanzamientos se realizaron los mismos "
+"días. El desarrollo de 3.0 ha influido en muchas características de 2.6."
 
 #: ../Doc/whatsnew/2.6.rst:97
 msgid ""
@@ -122,21 +125,33 @@ msgid ""
 "described in this document in the appropriate place.  Some of the 3.0-"
 "derived features are:"
 msgstr ""
+"Python 3.0 es un rediseño de Python de gran alcance que rompe la "
+"compatibilidad con la serie 2.x. Esto significa que el código Python "
+"existente necesitará alguna conversión para poder ejecutarse en Python 3.0. "
+"Sin embargo, no todos los cambios en 3.0 rompen necesariamente la "
+"compatibilidad. En los casos en que las nuevas funciones no provoquen la "
+"rotura del código existente, se han actualizado a 2.6 y se describen en este "
+"documento en el lugar correspondiente. Algunas de las características "
+"derivadas de 3.0 son:"
 
 #: ../Doc/whatsnew/2.6.rst:106
 msgid ""
 "A :meth:`__complex__` method for converting objects to a complex number."
 msgstr ""
+"El método :meth:`__complex__` para convertir objetos en un número complejo."
 
 #: ../Doc/whatsnew/2.6.rst:107
 msgid "Alternate syntax for catching exceptions: ``except TypeError as exc``."
 msgstr ""
+"Sintaxis alternativa para detectar excepciones: ``except TypeError as exc``."
 
 #: ../Doc/whatsnew/2.6.rst:108
 msgid ""
 "The addition of :func:`functools.reduce` as a synonym for the built-in :func:"
 "`reduce` function."
 msgstr ""
+"La adición de :func:`functools.reduce` como sinónimo de la función "
+"incorporada :func:`reduce`."
 
 #: ../Doc/whatsnew/2.6.rst:111
 msgid ""
@@ -147,6 +162,13 @@ msgid ""
 "new 3.0 semantics.  Code written to be compatible with 3.0 can do ``from "
 "future_builtins import hex, map`` as necessary."
 msgstr ""
+"Python 3.0 agrega varias funciones integradas nuevas y cambia la semántica "
+"de algunas integradas existentes. Las funciones que son nuevas en 3.0 como :"
+"func:`bin` simplemente se han agregado a Python 2.6, pero las funciones "
+"existentes no se han cambiado; en cambio, el módulo :mod:`future_builtins` "
+"tiene versiones con la nueva semántica 3.0. El código escrito puede ser "
+"compatible con 3.0 haciendo ``from future_builtins import hex, map`` según "
+"sea necesario."
 
 #: ../Doc/whatsnew/2.6.rst:119
 msgid ""
@@ -156,6 +178,12 @@ msgid ""
 "switch is available to Python code as the boolean variable :data:`sys."
 "py3kwarning`, and to C extension code as :c:data:`Py_Py3kWarningFlag`."
 msgstr ""
+"Un nuevo modificador de línea de comandos, :opction:`!-3`, habilita "
+"advertencias sobre características que se eliminarán en Python 3.0. Puede "
+"ejecutar código con este modificador para ver cuánto trabajo será necesario "
+"para migrar el código a 3.0. El valor de este modificador está disponible "
+"para el código Python como la variable booleana :data:`sys.py3kwarning`, y "
+"para el código de extensión C como :c:data:`Py_Py3kWarningFlag`."
 
 #: ../Doc/whatsnew/2.6.rst:128
 msgid ""
@@ -164,10 +192,14 @@ msgid ""
 "`3100` that describes the general goals for Python 3.0, and then explore the "
 "higher-numbered PEPS that propose specific features."
 msgstr ""
+"Las series 3xxx de PEP, que contienen propuestas para Python 3.0. :pep:"
+"`3000` describe el proceso de desarrollo de Python 3.0. Empiece con :pep:"
+"`3100` que describe los objetivos generales de Python 3.0, y luego explore "
+"los PEPS con números más altos que proponen características específicas."
 
 #: ../Doc/whatsnew/2.6.rst:136
 msgid "Changes to the Development Process"
-msgstr ""
+msgstr "Cambios en el proceso de desarrollo"
 
 #: ../Doc/whatsnew/2.6.rst:138
 msgid ""
@@ -176,10 +208,14 @@ msgid ""
 "customized Roundup installation, and the documentation was converted from "
 "LaTeX to reStructuredText."
 msgstr ""
+"Mientras se desarrollaba 2.6, el proceso de desarrollo de Python experimentó "
+"dos cambios significativos: cambiamos del seguidor de incidentes (*issue "
+"tracker*) de SourceForge a una instalación personalizada de Roundup, y la "
+"documentación se convirtió de LaTeX a reStructuredText."
 
 #: ../Doc/whatsnew/2.6.rst:145
 msgid "New Issue Tracker: Roundup"
-msgstr ""
+msgstr "Nuevo seguidor de incidentes: Roundup"
 
 #: ../Doc/whatsnew/2.6.rst:147
 msgid ""
@@ -188,6 +224,10 @@ msgid ""
 "much customization; for example, it wasn't possible to customize the life "
 "cycle of issues."
 msgstr ""
+"Durante mucho tiempo, los desarrolladores de Python estaban cada vez más "
+"molestos por el seguidor de errores de SourceForge. La solución alojada en "
+"SourceForge no permite mucha personalización; por ejemplo, no fue posible "
+"personalizar el ciclo de vida de los problemas."
 
 #: ../Doc/whatsnew/2.6.rst:152
 msgid ""
@@ -202,6 +242,17 @@ msgid ""
 "software projects; Roundup is an open-source project that requires "
 "volunteers to administer it and a server to host it."
 msgstr ""
+"Por lo tanto, el comité de infraestructura de la *Python Software "
+"Foundation* publicó una convocatoria sobre el seguimiento de incidentes, "
+"pidiendo a los voluntarios que configuren diferentes productos e importen "
+"algunos de los errores y parches de SourceForge. Se examinaron cuatro "
+"seguidores diferentes: `Jira <https://www.atlassian.com/software/jira/>` __, "
+"`Launchpad <https://launchpad.net/>` __, `Roundup <http://roundup ."
+"sourceforge.net/>`__ y `Trac <https://trac.edgewall.org/>`__. El comité "
+"finalmente se decidió por Jira y Roundup como los dos candidatos. Jira es un "
+"producto comercial que ofrece instancias alojadas sin costo para proyectos "
+"de software libre; Roundup es un proyecto de código abierto que requiere "
+"voluntarios para administrarlo y un servidor para alojarlo."
 
 #: ../Doc/whatsnew/2.6.rst:166
 msgid ""
@@ -212,6 +263,13 @@ msgid ""
 "possible, this edition of \"What's New in Python\" links to the bug/patch "
 "item for each change."
 msgstr ""
+"Después de publicar una llamada para voluntarios, se configuró una nueva "
+"instalación de Roundup en https://bugs.python.org. Una instalación de "
+"Roundup puede alojar varios seguidores, y este servidor ahora también aloja "
+"seguidores de problemas para Jython y para el sitio web de Python. "
+"Seguramente encontrará otros usos en el futuro. Siempre que sea posible, "
+"esta edición de \"Qué hay de nuevo en Python\" se vincula al elemento de "
+"error/parche para cada cambio."
 
 #: ../Doc/whatsnew/2.6.rst:174
 msgid ""
@@ -222,6 +280,12 @@ msgid ""
 "org/view/tracker/importer/ and may be useful to other projects wishing to "
 "move from SourceForge to Roundup."
 msgstr ""
+"`Upfront Systems <http://www.upfrontsoftware.co.za>` __ de Stellenbosch, "
+"Sudáfrica, proporciona amablemente el alojamiento del seguidor de errores de "
+"Python. Martin von Löwis se esforzó mucho en importar errores y parches "
+"existentes desde SourceForge. Sus scripts para esta operación de importación "
+"se encuentran en http://svn.python.org/view/tracker/importer/ y pueden ser "
+"útiles para otros proyectos que deseen pasar de SourceForge a Roundup."
 
 #: ../Doc/whatsnew/2.6.rst:185
 msgid "https://bugs.python.org"
@@ -229,7 +293,7 @@ msgstr "https://bugs.python.org"
 
 #: ../Doc/whatsnew/2.6.rst:185
 msgid "The Python bug tracker."
-msgstr ""
+msgstr "El seguidor de errores de Python."
 
 #: ../Doc/whatsnew/2.6.rst:188
 msgid "http://bugs.jython.org:"
@@ -237,7 +301,7 @@ msgstr "http://bugs.jython.org:"
 
 #: ../Doc/whatsnew/2.6.rst:188
 msgid "The Jython bug tracker."
-msgstr ""
+msgstr "El seguidor de errores de Jython."
 
 #: ../Doc/whatsnew/2.6.rst:191
 msgid "http://roundup.sourceforge.net/"
@@ -245,7 +309,7 @@ msgstr "http://roundup.sourceforge.net/"
 
 #: ../Doc/whatsnew/2.6.rst:191
 msgid "Roundup downloads and documentation."
-msgstr ""
+msgstr "Descargas y documentación de Roundup."
 
 #: ../Doc/whatsnew/2.6.rst:193
 msgid "http://svn.python.org/view/tracker/importer/"
@@ -253,11 +317,11 @@ msgstr "http://svn.python.org/view/tracker/importer/"
 
 #: ../Doc/whatsnew/2.6.rst:194
 msgid "Martin von Löwis's conversion scripts."
-msgstr ""
+msgstr "Scripts de conversión de Martin von Löwis."
 
 #: ../Doc/whatsnew/2.6.rst:197
 msgid "New Documentation Format: reStructuredText Using Sphinx"
-msgstr ""
+msgstr "Nuevo formato de documentación: texto reestructurado con Sphinx"
 
 #: ../Doc/whatsnew/2.6.rst:199
 msgid ""
@@ -267,6 +331,12 @@ msgid ""
 "provided attractive printed output while remaining straightforward to write "
 "once the basic rules of the markup were learned."
 msgstr ""
+"La documentación de Python se escribió usando LaTeX desde que el proyecto "
+"comenzó alrededor de 1989. En la década de 1980 y principios de la de 1990, "
+"la mayor parte de la documentación se imprimió para su estudio posterior, no "
+"se vio en línea. LaTeX fue ampliamente utilizado porque proporcionaba una "
+"salida impresa atractiva sin dejar de ser sencillo de escribir una vez que "
+"se aprendían las reglas básicas de marcado."
 
 #: ../Doc/whatsnew/2.6.rst:206
 msgid ""
@@ -280,6 +350,16 @@ msgid ""
 "into SGML and later XML, but performing a good conversion is a major task "
 "and no one ever committed the time required to finish the job."
 msgstr ""
+"Hoy en día, LaTeX todavía se usa para escribir publicaciones destinadas a la "
+"impresión, pero el panorama de las herramientas de programación ha cambiado. "
+"Ya no imprimimos montones de documentación; en su lugar, lo navegamos en "
+"línea y HTML se ha convertido en el formato más importante para dar soporte. "
+"Desafortunadamente, convertir LaTeX a HTML es bastante complicado y Fred L. "
+"Drake Jr., el editor de documentación de Python desde hace mucho tiempo, "
+"pasó mucho tiempo manteniendo el proceso de conversión. De vez en cuando, la "
+"gente sugeriría convertir la documentación a SGML y luego a XML, pero "
+"realizar una buena conversión es una tarea importante y nadie comprometió el "
+"tiempo necesario para terminar el trabajo."
 
 #: ../Doc/whatsnew/2.6.rst:217
 msgid ""
@@ -287,6 +367,9 @@ msgid ""
 "building a new toolchain for processing the documentation.  The resulting "
 "package is called Sphinx, and is available from http://sphinx-doc.org/."
 msgstr ""
+"Durante el ciclo de desarrollo 2.6, Georg Brandl se esforzó mucho en crear "
+"una nueva cadena de herramientas para procesar la documentación. El paquete "
+"resultante se llama Sphinx y está disponible en http://sphinx-doc.org/."
 
 #: ../Doc/whatsnew/2.6.rst:222
 msgid ""
@@ -295,6 +378,11 @@ msgid ""
 "input format is reStructuredText, a markup syntax supporting custom "
 "extensions and directives that is commonly used in the Python community."
 msgstr ""
+"Sphinx se concentra en la salida HTML, produciendo HTML moderno y con un "
+"estilo atractivo; la salida impresa todavía se admite mediante la conversión "
+"a LaTeX. El formato de entrada es reStructuredText, una sintaxis de marcado "
+"que admite extensiones y directivas personalizadas que se usa comúnmente en "
+"la comunidad de Python."
 
 #: ../Doc/whatsnew/2.6.rst:228
 msgid ""
@@ -303,14 +391,18 @@ msgid ""
 "org/en/master/examples.html>`__) have adopted Sphinx as their documentation "
 "tool."
 msgstr ""
+"Sphinx es un paquete independiente que se puede usar para escribir, y casi "
+"dos docenas de otros proyectos (`enumerados en el sitio web de Sphinx "
+"<https://www.sphinx-doc.org/en/master/examples.html>`__) han adoptado Sphinx "
+"como su herramienta de documentación."
 
 #: ../Doc/whatsnew/2.6.rst:236
 msgid "`Documenting Python <https://devguide.python.org/documenting/>`__"
-msgstr ""
+msgstr "`Documentando Python <https://devguide.python.org/documenting/>`__"
 
 #: ../Doc/whatsnew/2.6.rst:236
 msgid "Describes how to write for Python's documentation."
-msgstr ""
+msgstr "Describe cómo escribir para la documentación de Python."
 
 #: ../Doc/whatsnew/2.6.rst:239
 msgid "`Sphinx <http://sphinx-doc.org/>`__"
@@ -318,7 +410,7 @@ msgstr "`Sphinx <http://sphinx-doc.org/>`__"
 
 #: ../Doc/whatsnew/2.6.rst:239
 msgid "Documentation and code for the Sphinx toolchain."
-msgstr ""
+msgstr "Documentación y código para la cadena de herramientas Sphinx."
 
 #: ../Doc/whatsnew/2.6.rst:241
 msgid "`Docutils <http://docutils.sourceforge.net>`__"
@@ -327,10 +419,12 @@ msgstr "`Docutils <http://docutils.sourceforge.net>`__"
 #: ../Doc/whatsnew/2.6.rst:242
 msgid "The underlying reStructuredText parser and toolset."
 msgstr ""
+"El analizador sintáctico y el conjunto de herramientas *reStructuredText* "
+"subyacentes."
 
 #: ../Doc/whatsnew/2.6.rst:248
 msgid "PEP 343: The 'with' statement"
-msgstr ""
+msgstr "PEP 343: La declaración *'with'*"
 
 #: ../Doc/whatsnew/2.6.rst:250
 msgid ""
