--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-05-23 18:58-0300\n"
+"PO-Revision-Date: 2021-06-12 19:34-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -583,6 +583,9 @@ msgid ""
 "\"context manager\".  The context manager must have :meth:`__enter__` and :"
 "meth:`__exit__` methods."
 msgstr ""
+"La expresión se evalúa y debería dar como resultado un objeto llamado "
+"\"gestor de contexto\". El gestor de contexto debe tener los métodos :meth:"
+"`__enter__` y :meth:`__exit__`."
 
 #: ../Doc/whatsnew/2.6.rst:345
 msgid ""
@@ -590,10 +593,13 @@ msgid ""
 "returned is assigned to *VAR*.  If no ``as VAR`` clause is present, the "
 "value is simply discarded."
 msgstr ""
+"Se llama al método :meth:`__enter__` del gestor de contexto. El valor "
+"retornado se asigna a *VAR*. Si no hay una cláusula ``as VAR``, el valor "
+"simplemente se descarta."
 
 #: ../Doc/whatsnew/2.6.rst:349
 msgid "The code in *BLOCK* is executed."
-msgstr ""
+msgstr "Se ejecuta el código en *BLOCK*."
 
 #: ../Doc/whatsnew/2.6.rst:351
 msgid ""
@@ -607,18 +613,31 @@ msgid ""
 "containing the ':keyword:`with`' statement will never realize anything went "
 "wrong."
 msgstr ""
+"Si *BLOCK* lanza una excepción, se llama al método :meth:`__exit__` del "
+"gestor de contexto con tres argumentos, los detalles de la excepción "
+"(``type, value, traceback``, los mismos valores retornados por :func:`sys."
+"exc_info`, que también puede ser ``None`` si no se produjo ninguna "
+"excepción). El valor de retorno del método controla si se vuelve a generar "
+"una excepción: cualquier valor *false* vuelve a lanzar la excepción, y "
+"``True`` resultará en inhibirla. Rara vez querrá suprimir la excepción, "
+"porque si lo hace, el autor del código que contenga la sentencia ':keyword:"
+"`with`' nunca se dará cuenta de que algo salió mal."
 
 #: ../Doc/whatsnew/2.6.rst:360
 msgid ""
 "If *BLOCK* didn't raise an exception,  the :meth:`__exit__` method is still "
 "called, but *type*, *value*, and *traceback* are all ``None``."
 msgstr ""
+"Si *BLOCK* no lanzó una excepción, el método :meth:`__exit__` continúa "
+"llamándose, pero *type*, *value* y *traceback* son todos``None``."
 
 #: ../Doc/whatsnew/2.6.rst:363
 msgid ""
 "Let's think through an example.  I won't present detailed code but will only "
 "sketch the methods necessary for a database that supports transactions."
 msgstr ""
+"Pensemos en un ejemplo. No presentaré un código detallado, solo bosquejaré "
+"los métodos necesarios para una base de datos que admita transacciones."
 
 #: ../Doc/whatsnew/2.6.rst:366
 msgid ""
@@ -628,12 +647,21 @@ msgid ""
 "rolled back, meaning that the changes are all discarded and the database is "
 "unchanged.  See any database textbook for more information.)"
 msgstr ""
+"(Para las personas que no están familiarizadas con la terminología de la "
+"base de datos: un conjunto de cambios en la base de datos se agrupa en una "
+"transacción. Las transacciones pueden confirmarse, lo que significa que "
+"todos los cambios se escriben en la base de datos, o deshacerse, lo que "
+"significa que todos los cambios se descartan y la base de datos no ha "
+"cambiado. Consulte cualquier libro de texto de base de datos para obtener "
+"más información)."
 
 #: ../Doc/whatsnew/2.6.rst:372
 msgid ""
 "Let's assume there's an object representing a database connection. Our goal "
 "will be to let the user write code like this::"
 msgstr ""
+"Supongamos que hay un objeto que representa una conexión de base de datos. "
+"Nuestro objetivo será permitir que el usuario escriba un código como este::"
 
 #: ../Doc/whatsnew/2.6.rst:381
 msgid ""
@@ -641,6 +669,9 @@ msgid ""
 "or rolled back if there's an exception. Here's the basic interface for :"
 "class:`DatabaseConnection` that I'll assume::"
 msgstr ""
+"La transacción debe confirmarse si el código del bloque se ejecuta sin "
+"problemas o revertirse si hay una excepción. Aquí está la interfaz básica "
+"para :class:`DatabaseConnection` que asumiré::"
 
 #: ../Doc/whatsnew/2.6.rst:394
 msgid ""
@@ -650,6 +681,11 @@ msgid ""
 "cursor`` to their ':keyword:`with`' statement to bind the cursor to a "
 "variable name. ::"
 msgstr ""
+"El método :meth:`__enter__` es bastante fácil, ya que solo tiene que iniciar "
+"una nueva transacción. Para esta aplicación, el objeto cursor resultante "
+"sería un resultado útil, por lo que el método lo retornará. Luego, el "
+"usuario puede agregar ``as cursor`` a su sentencia ':keyword:`with`' para "
+"vincular el cursor a un nombre de variable. ::"
 
 #: ../Doc/whatsnew/2.6.rst:406
 msgid ""
@@ -658,6 +694,10 @@ msgid ""
 "occurred.  If there was no exception, the transaction is committed.  The "
 "transaction is rolled back if there was an exception."
 msgstr ""
+"El método :meth:`__exit__` es el más complicado porque es donde se debe "
+"realizar la mayor parte del trabajo. El método debe verificar si ocurrió una "
+"excepción. Si no hubo excepción, la transacción se confirma. La transacción "
+"se revierte si hubo una excepción."
 
 #: ../Doc/whatsnew/2.6.rst:411
 msgid ""
@@ -666,6 +706,11 @@ msgid ""
 "exception will be re-raised automatically.  If you wished, you could be more "
 "explicit and add a :keyword:`return` statement at the marked location. ::"
 msgstr ""
+"En el siguiente código, la ejecución simplemente caerá al final de la "
+"función, retornando el valor predeterminado ``None``. ``None`` es falso, por "
+"lo que la excepción se volverá a lanzar automáticamente. Si lo desea, puede "
+"ser más explícito y agregar una sentencia keyword:`return` en la ubicación "
+"marcada. ::"
 
 #: ../Doc/whatsnew/2.6.rst:431
 msgid "The contextlib module"
