--- a/whatsnew/2.4.po
+++ b/whatsnew/2.4.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 2.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2021-05-21 20:38+0200\n"
+"PO-Revision-Date: 2021-06-14 17:47+0200\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1231,29 +1231,36 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.4.rst:778
 msgid "Decorators for functions and methods were added (:pep:`318`)."
-msgstr "Decoradores para funciones fueron añadidas (:pep:`318`)."
+msgstr "Fueron añadidos decoraciones para funciones (:pep:`318`)."
 
 #: ../Doc/whatsnew/2.4.rst:780
 msgid ""
 "Built-in :func:`set` and :func:`frozenset` types were  added (:pep:`218`). "
 "Other new built-ins include the ``reversed(seq)`` function (:pep:`322`)."
 msgstr ""
+"Funciones built-in `set` y :func:`frozenset` fueron añadidas (:pep:`218`). "
+"Otras nuevas funciones built-ins incluyen la función ``reversed(seq)`` (:pep:"
+"`322`)."
 
 #: ../Doc/whatsnew/2.4.rst:783
 msgid "Generator expressions were added (:pep:`289`)."
-msgstr ""
+msgstr "Generador de expresiones fueron añadidas (:pep:`289`)."
 
 #: ../Doc/whatsnew/2.4.rst:785
 msgid ""
 "Certain numeric expressions no longer return values restricted to 32 or 64 "
 "bits (:pep:`237`)."
 msgstr ""
+"Algunas expresiones numéricas ya no retornan valores restringidos a 32 o 64 "
+"bits (:pep:`237`)."
 
 #: ../Doc/whatsnew/2.4.rst:788
 msgid ""
 "You can now put parentheses around the list of names in a ``from module "
 "import names`` statement (:pep:`328`)."
 msgstr ""
+"Se puede poner entre paréntesis una lista de nombres en la declaración "
+"``from module import names`` (:pep:`328`)."
 
 #: ../Doc/whatsnew/2.4.rst:791
 msgid ""
@@ -1261,6 +1268,10 @@ msgid ""
 "class:`dict` constructor.  This includes any mapping, any iterable of key/"
 "value pairs, and keyword arguments. (Contributed by Raymond Hettinger.)"
 msgstr ""
+"El método :meth:`dict.update` ahora acepta el mismo argumento que el "
+"constructor de la :class:`dict`. Esto incluye cualquier tipo de mapeo, "
+"iterable pares de clave/valor y argumentos de palabra clave. (Contribución "
+"de Raymond Hettinger)"
 
 #: ../Doc/whatsnew/2.4.rst:795
 msgid ""
@@ -1268,6 +1279,10 @@ msgid ""
 "an optional argument for specifying a fill character other than a space. "
 "(Contributed by Raymond Hettinger.)"
 msgstr ""
+"Los métodos de cadena de caracteres :meth:`ljust`, :meth:`rjust` y :meth:"
+"`center` ahora toman un argumento de tipo opcional para especificar un "
+"carácter de relleno que no sea un espacio. (Contribución de Raymond "
+"Hettinger)."
 
 #: ../Doc/whatsnew/2.4.rst:799
 msgid ""
@@ -1275,6 +1290,9 @@ msgid ""
 "`split` method but splits from the end of the string.   (Contributed by Sean "
 "Reifschneider.) ::"
 msgstr ""
+"Cadenas de caracteres también han ganado un método :meth:`rsplit` que "
+"funciona como el método :meth:`split` pero divide desde el final de la "
+"cadena de caracteres. (Contribución de Sean Reifschneider)"
 
 #: ../Doc/whatsnew/2.4.rst:808
 msgid ""
@@ -1282,6 +1300,10 @@ msgid ""
 "meth:`sort` method of lists. These parameters make some common usages of :"
 "meth:`sort` simpler. All of these parameters are optional."
 msgstr ""
+"Tres parametros de argumentos de palabra clave *cmp*, *key* y *reverse* "
+"fueron añadidos al método de listas :meth:`sort`. Estos parámetros hacen "
+"algunos usos comunes del método :meth:`sort` mas simple. Todos estos "
+"parámetros son opcionales."
 
 #: ../Doc/whatsnew/2.4.rst:812
 msgid ""
@@ -1291,6 +1313,10 @@ msgid ""
 "Previously this was the only parameter that could be provided to :meth:"
 "`sort`."
 msgstr ""
+"Para el parámetro *cmp*  el valor debe ser una función comparativa que toma "
+"dos parámetros y retorna -1, 0 o + 1 dependiendo de como compare los "
+"parámetros. Esta función será usada para ordenar la lista. Previamente esto "
+"era el único parámetro que podía ser entregado al :meth:`sort`."
 
 #: ../Doc/whatsnew/2.4.rst:817
 msgid ""
@@ -1298,6 +1324,10 @@ msgid ""
 "returns a comparison key for the element.  The list is then sorted using the "
 "comparison keys.  The following example sorts a list case-insensitively::"
 msgstr ""
+"*key* debe ser una función con un solo parámetro que toma un elemento de la "
+"lista y retorna una llave de comparación para el elemento. Entonces la lista "
+"es ordenado usando las claves de comparación. El siguiente ejemplo ordena "
+"una lista sin distinción de mayúsculas ni minúsculas::"
 
 #: ../Doc/whatsnew/2.4.rst:834
 msgid ""
@@ -1307,6 +1337,12 @@ msgid ""
 "the list while using *cmp* will call it twice for each comparison, so using "
 "*key* saves on invocations of the :meth:`lower` method."
 msgstr ""
+"El ultimo ejemplo el cual usa el parámetro *cmp*  is la antigua forma de "
+"ejecutar el orden sin distinción de mayusculas y minúsculas. Funciona pero "
+"es mas lento en vez de usar el parámetro *key*.  El uso de *key* llama al "
+"método : meth: `lower`una vez para cada elemento de la lista mientras el uso "
+"de *cmp* lo llamara dos veces para cada comparación, entonces al usar * key "
+"* se guardan las llamadas del método :meth:`lower` ."
 
 #: ../Doc/whatsnew/2.4.rst:840
 msgid ""
@@ -1314,6 +1350,10 @@ msgid ""
 "avoid a :keyword:`lambda` expression by using an unbound method instead.  "
 "For example, the above case-insensitive sort is best written as::"
 msgstr ""
+"Para funciones de clave sencillas y comparativas es a menudo posible el "
+"obviar la palabra clave `lambda` usando un método sin ligar en reemplazo. El "
+"siguiente ejemplo de orden sin importar mayusculas ni minúsculas es mejor "
+"escrito como se muestra::"
 
 #: ../Doc/whatsnew/2.4.rst:848
 msgid ""
@@ -1321,6 +1361,9 @@ msgid ""
 "true, the list will be sorted into reverse order. Instead of ``L.sort(); L."
 "reverse()``, you can now write ``L.sort(reverse=True)``."
 msgstr ""
+"Finalmente el parámetro *reverse* toma un valor de tipo booleano. Si el "
+"valor es verdadero la lista será reversada. En vez de``L.sort(); L."
+"reverse()`` ahora se puede escribir ``L.sort(reverse=True)``."
 
 #: ../Doc/whatsnew/2.4.rst:852
 msgid ""
@@ -1330,10 +1373,18 @@ msgid ""
 "list by age, resulting in a list sorted by age where people with the same "
 "age are in name-sorted order."
 msgstr ""
+"Los resultados del ordenamiento ahora están garantizados que son estables. "
+"Esto significa que dos entradas con iguales claves serán retiradas en el "
+"mismo orden en que fueron ingresadas. Por ejemplo se puede ordenar una lista "
+"de personas por el nombre y entonces ordenarla por edad, resultando en una "
+"lista ordenada donde las personas con la misma edad están en el mismo orden "
+"por nombre."
 
 #: ../Doc/whatsnew/2.4.rst:858
 msgid "(All changes to :meth:`sort` contributed by Raymond Hettinger.)"
 msgstr ""
+"(Todos los cambios al método :meth:`sort` fueron realizados por Raymond "
+"Hettinger.)"
 
 #: ../Doc/whatsnew/2.4.rst:860
 msgid ""
@@ -1341,29 +1392,35 @@ msgid ""
 "place :meth:`list.sort` method but can be used in expressions.  The "
 "differences are:"
 msgstr ""
+"Se tiene una nueva función incorporada ``sorted(iterable)`` que trabaja como "
+"el método in situ :meth:`list.sort` que se puede usar en expresiones. Las "
+"diferencias son:"
 
 #: ../Doc/whatsnew/2.4.rst:864
 msgid "the input may be any iterable;"
-msgstr ""
+msgstr "el dato de entrada puede ser algún interable;"
 
 #: ../Doc/whatsnew/2.4.rst:866
 msgid "a newly formed copy is sorted, leaving the original intact; and"
-msgstr ""
+msgstr "se ordena una copia recién formada, manteniendo el original intacto y"
 
 #: ../Doc/whatsnew/2.4.rst:868
 msgid "the expression returns the new sorted copy"
-msgstr ""
+msgstr "la expresión retorna una nueva copia ordenada"
 
 #: ../Doc/whatsnew/2.4.rst:891 ../Doc/whatsnew/2.4.rst:919
 #: ../Doc/whatsnew/2.4.rst:1212
 msgid "(Contributed by Raymond Hettinger.)"
-msgstr ""
+msgstr "(Contribución de Raymond Hettinger.)"
 
 #: ../Doc/whatsnew/2.4.rst:893 ../Doc/whatsnew/2.4.rst:1519
 msgid ""
 "Integer operations will no longer trigger an :exc:`OverflowWarning`. The :"
 "exc:`OverflowWarning` warning will disappear in Python 2.5."
 msgstr ""
+"Operaciones de numeros enteros no lanzaran una excepción :exc:"
+"`OverflowWarning`. La advertencia sobre :exc:`OverflowWarning` desaparecerá "
+"en Python 2.5."
 
 #: ../Doc/whatsnew/2.4.rst:896
 msgid ""
@@ -1372,6 +1429,10 @@ msgid ""
 "as a script. For example,  you can now run the Python profiler with ``python "
 "-m profile``. (Contributed by Nick Coghlan.)"
 msgstr ""
+"Se añadió al interprete una nueva opción de cambio :option:`-m` la cual toma "
+"un nombre, busca el modulo correspondiente en ``sys.path`` y corre el modulo "
+"como script. Ahora por ejemplo se puede correr el perfilador de Python con "
+"``python -m profile``. (Contribución de Nick Coghlan)"
 
 #: ../Doc/whatsnew/2.4.rst:901
 msgid ""
